-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: javafx
-
b122
-
linux
Steps to re-produce
1. Use latest 9-dev and build toys
2. launch hello.HelloSanity from Hello.jar
3. Failed to launch due to $JAVA_HOME/lib/amd64/libglass.so: undefined symbol: _Z36g_settings_schema_source_get_defaultv
Observed on Ubuntu 14.04 , 64 bit
1. Use latest 9-dev and build toys
2. launch hello.HelloSanity from Hello.jar
3. Failed to launch due to $JAVA_HOME/lib/amd64/libglass.so: undefined symbol: _Z36g_settings_schema_source_get_defaultv
Observed on Ubuntu 14.04 , 64 bit
- duplicates
-
JDK-8158086 libglass.so: undefined symbol: _Z36g_settings_schema_source_get_defaultv
-
- Closed
-