8157600: Failed to launch hello.HelloSanity due to undefined symbol

Reviewed-by: kcr, ddhill